# novellus

./: .coveragerc  .env.api.example  .gitignore  .mcp.json  AI_INTEGRATION_STATUS_REPORT.md  API_README.md  CONFLICT_ELEMENTS_ETL_REPORT.md  CONFLICT_INTEGRATION_GUIDE.md  CROSS_DOMAIN_CONFLICT_ANALYSIS_SYSTEM.md  CULTURAL_DATABASE_ARCHITECTURE.md  Dockerfile.api  EXECUTIVE_SUMMARY.md  Makefile  README.md  README_API.md  README_TESTING.md  conflict_elements_extractor.py  conflict_matrix_query_tool.py  cross_domain_conflict_analysis_report.json  cultural_framework_test_report.json  docker-compose.api.yml  enhanced_conflict_extractor.py  init_conflict_matrix_database.py  pyproject.toml  pytest.ini  quick_analysis_demo.py  quick_conflict_integration_test.py  requirements-api.txt  requirements.txt  requirements_api.txt  run_api.py  simple_conflict_analyzer.py  test_ai_integration_simple.py  test_api.py
.claude/: settings.local.json
.claude/agents/: ai-engineer.md  api-documenter.md  architect-review.md  backend-architect.md  backend-security-coder.md  blockchain-developer.md  business-analyst.md  c-pro.md  cloud-architect.md  code-reviewer.md  content-marketer.md  cpp-pro.md  csharp-pro.md  customer-support.md  data-engineer.md  data-scientist.md  database-admin.md  database-optimizer.md  debugger.md  devops-troubleshooter.md  django-pro.md  docs-architect.md  dx-optimizer.md  elixir-pro.md  error-detective.md  fastapi-pro.md  flutter-expert.md  frontend-developer.md  frontend-security-coder.md  golang-pro.md  graphql-architect.md  hr-pro.md  hybrid-cloud-architect.md  incident-responder.md  ios-developer.md  java-pro.md  javascript-pro.md  kubernetes-architect.md  legacy-modernizer.md  legal-advisor.md  (+29 more)
.claude/commands/: README.md
.github/workflows/: tests.yml
config/: ai_models.yaml
config/status/: ai_integration_status.json
conflict_extraction_output/: batch_processor.py  data_migration.py  data_quality_report.json
docker/: README.md
docker/mongodb/: Dockerfile.mongodb  docker-compose.yml  mongod.conf
docker/postgres/: Dockerfile.postgres  docker-compose.yml  postgresql.conf  simple_test.sql  test_pgvector.sql
docs/: API_ARCHITECTURE.md  CLAUDE.md  PROJECT_STRUCTURE.md  ai_native_database_architecture_assessment.md  ai_system_documentation.md  collaborative_system_summary.md  collaborative_workflow_usage.md  comprehensive_system_architecture_analysis_report.md  database_health_check_report.md  pgvector_implementation_guide.md  pgvector_implementation_success.md  testing_troubleshooting_guide.md  testing_validation_report.md
docs/development/: DATABASE_ARCHITECTURE.md  NINE_DOMAINS_PROCESSOR_GUIDE.md  README_IMPLEMENTATION.md
docs/knowledge/: 01-system-design.md  02-character-worksheet.md  03-character-interview.md  04-plot-checklist.md  05-diagnostic-tools.md  06-technical-implementation.md  07-content-expansion.md  08-world-building-system.md  09-scene-environment-system.md  10-plot-outline-system.md  11-integrated-knowledge-system.md  12-enhanced-knowledge-taxonomy.md  13-enhanced-creation-tools-design.md  README.md
docs/reports/: COMPREHENSIVE_PROJECT_ANALYSIS.md  CONFLICT_NETWORK_ANALYSIS_README.md  CONFLICT_NETWORK_MODEL_FINAL_REPORT.md  CULTURAL_ANALYSIS_REPORT.md  FINAL_ANALYSIS_SUMMARY.md  FINAL_INTEGRATION_REPORT.md
docs/thinking/: knowledge-base-design.md  project-design-plan.md
docs/角色/: 001.ts  002.ts  003.ts  004.ts  005.ts  006.ts  007.ts  008.ts  009.ts  010.ts  011.ts  012.ts  013.ts  014.ts  015.ts  016.ts  017.ts  018.ts
enhanced_conflict_output/: enhanced_conflict_elements_data.json  enhanced_postgresql_insert.sql  entities.csv
examples/: ai_system_usage.py
scripts/: run_tests.py
scripts/database_setup/: import_large_cultural_data.py  init_database.py
scripts/demos/: conflict_integration_demo.py  demo_conflict_analysis.py
scripts/utils/: run_conflict_analysis.py  verify_cultural_data.py
src/: __init__.py  batch_creation_manager.py  claude_client.py  collaborative_workflow.py  config.py  database_init.py  mcp_collaborative_tools.py  mcp_law_chain_tools.py  mcp_prompt_tools.py  mcp_server.py
src/ai/: cache_manager.py  integration.py  metrics_collector.py  model_manager.py
src/analysis/: README.md  advanced_network_analyzer.py  basic_test.py  comprehensive_analysis_report.py  comprehensive_conflict_network_model.py  comprehensive_report_generator.py  conflict_network_analyzer.py  conflict_prediction_system.py  cross_domain_conflict_analyzer.py  cultural_framework_analyzer.py  dynamic_conflict_analyzer.py  example_analysis.py  law_chain_ai_assistant.py  main_conflict_analyzer.py  network_visualization_toolkit.py  network_visualizer.py  simple_test.py  test_analyzer.py
story_analysis_output/: intelligent_story_analysis_report.json
tests/: README.md  automated_test_runner.py  conftest.py  performance_benchmark_suite.py  simple_claude_test.py  simple_test_network_model.py  test_ai_integration.py  test_ai_model_manager.py  test_claude_integration.py  test_collaborative_simple.py  test_collaborative_workflow.py  test_comprehensive_network_model.py  test_cultural_framework.py  test_integration_suite.py  test_nine_domains_processor.py  test_pgvector_suite.py
tools/: index.html  package.json  tsconfig.json  vite.config.ts
(+253 files in other folders)
